# kefir

./: .gitignore  CHECKPOINT.md  README.md  pyproject.toml  requirements.txt
docs/: kefir_model_comparison_references.bib  kefir_model_comparison_report.aux  kefir_model_comparison_report.bbl  kefir_model_comparison_report.blg  kefir_model_comparison_report.out  kefir_model_comparison_report.tex
logistic_pinn_outputs/: deterministic_logistic_pinn_training_loss.csv  stochastic_logistic_pinn_training_loss.csv  water_kefir_logistic_pinn_comparison.csv  water_kefir_logistic_pinn_dense.csv  water_kefir_logistic_pinn_metrics.csv  water_kefir_logistic_pinn_parameters.csv
outputs/neural_sde_comparison_outputs/: classical_logistic_parameters.csv  classical_logistic_training_loss.csv  model_comparison_metrics.csv  neural_ode_training_loss.csv  neural_sde_training_loss.csv  training_objective_scales.csv  water_kefir_neural_dynamics_comparison.csv
src/: qr_generator.py
src/kefir_models/: logistic_pinn_compare.py  ode_fit.py  plot_all_models.py  plot_ode_fit.py  plot_pinn_fit.py  plot_sde_compare.py  plot_style.py  sde_compare.py
src/kefir_models/.antigravitycli/: dc4843a9-9f53-4125-8f2e-de40fd3c9200.json
tests/: test_ode_fit.py  test_plot_all_models.py
